# mailserver

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.inbound  Dockerfile.mda  Dockerfile.mta  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MAIL_CONFIG_SYNC.md  Makefile  PORT_CONFIGURATION.md  POSTFIX_DOVECOT_INTEGRATION.md  POSTFIX_INTEGRATION.md  README.md  TROUBLESHOOTING.md  Wiki.md  demo-dark.html  demo-no-js.html  demo-rtl.html  demo.html  dkim-gen.sh  docker-compose.yml  docker-init.sh  dovecot-users  dovecot.conf  entrypoint-mta.sh  entrypoint.sh  fix_makefile_tabs.sh  forward-email.sh  gen-certs.sh  generate-dkim.sh  generate-dns.sh  k8s-mailserver-manifest.yaml  keygen.sh  permissions.sh  revaliases  rust.sh  (+6 more)
.gitea/workflows/: deploy.yml
.github/: copilot-instructions.md
.github/workflows/: docker.yml  release.yml
admin/: ADMIN_README.md  Dockerfile  README.md  composer.json  sync-config.sh
admin/config/: auth.php  mailserver.php
admin/docker/: entrypoint.sh
admin/routes/: api.php  web.php
data/dovecot-conf/: dovecot.conf  users
data/postfix/: main.cf  virtual
dkim/: key.table  signing.table  trusted.hosts
docs/: architecture.puml
dovecot/: Dockerfile  dovecot.conf
dovecot/dovecot-conf/: dovecot.conf  passwd
honeypot/: Cargo.toml  README.md  honeypot.json
honeypot/src/: config.rs  main.rs  service.rs  tls.rs
init/: Dockerfile
legacy/: .dockerignore  .env.example  README.md  docker-compose.yml
legacy/admin/: Dockerfile
legacy/dovecot/: dovecot.conf
legacy/init/: Dockerfile
legacy/nginx-proxy/: Dockerfile  entrypoint.sh
legacy/pixelmilter/: Dockerfile  domain-wide-footer.html
legacy/pixelserver/: Dockerfile
legacy/postfix/: master.cf.tmpl  pixel-content-filter.sh.tmpl
legacy/reinject/: Dockerfile
mail/: Dockerfile
migrations/: 001_initial_schema.sql  002_fail2ban.sql  003_bimi.sql  004_unsubscribe.sql  005_spambl.sql  006_forwarding.sql  006_webhook_log.sql  007_dmarc_inboxes.sql  008_outbound_relays.sql  009_tracking_patterns.sql  009_webdav.sql  010_caldav.sql  010_tracking_rules.sql  011_mcp_log.sql  012_abuse_inboxes.sql  012_dmarc_ruf.sql  013_unsubscribe_patterns_api_token.sql  014_mcp_log_request_body.sql  015_footer_rules.sql  016_registration.sql  017_rate_limit_rules.sql  018_carddav.sql  019_bounce_inboxes.sql  019_replication.sql  020_hlc_replication.sql  020_jmap.sql
nginx-proxy/: Dockerfile  README.md  default.conf  entrypoint.sh  nginx.conf
opendkim/: Dockerfile  KeyTable  TrustedHosts  entrypoint.sh  opendkim.conf
opendkim/scripts/: add-domain.sh
pixelmilter/: Cargo.toml  Dockerfile  domain-wide-footer.html  pixelmilter-entrypoint.sh  pixelmilter.pl
pixelmilter/src/: content_filter.rs  main.rs  milter.rs  pixel_injector.rs
pixelserver/: Cargo.toml  Dockerfile  app.pl  pixelserver-entrypoint.sh
pixelserver/src/: main.rs  pixel.rs  stats.rs
postfix/: Dockerfile  entrypoint.sh  healthcheck.sh  main.cf.tmpl  master.cf.tmpl  pixel-content-filter.sh  pixel-content-filter.sh.tmpl  reinject.py  virtual_aliases.tmpl
postfix-reinject/: Cargo.toml
postfix-reinject/src/: main.rs
postfix/config/: main.cf  main.cf.tmpl  master.cf  master.cf.tmpl  virtual  vmailbox  (+2 more)
reinject/: Dockerfile
scripts/: add-user.sh  gen-certs.sh  test-mail.sh
src/: auth.rs  config.rs  db.rs  fail2ban.rs  filter.rs  hlc.rs  main.rs  provision.rs  replication.rs  web.rs
static/: desktop.css  style.css
templates/: api_docs.html  dashboard.html  error.html  health.html  layout.html
(+161 files in other folders)
