[package]
name = "mailserver"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "mailserver"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["form", "multipart"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
rand = "0.8"
tower-http = { version = "0.5", features = ["fs"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
mailparse = "0.15"
http = "1"
tower = "0.4"
log = "0.4"
env_logger = "0.11"
askama = "0.12"
regex = "1"
