[package]
name = "honeypot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
rustls = "0.21"
tokio-rustls = "0.24"
rcgen = "0.11"
