[package]
name = "pixelmilter"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
mail-parser = "0.9"
regex = "1.0"
bytes = "1.0"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
