[package]
name = "pixelserver"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = { version = "0.14", features = ["full"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
rustls-pemfile = "1.0"
regex = "1.0"
bytes = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
